[tool.poetry]
name = "advent-of-code-python"
version = "1.8.4"
description = "Advent of Code 24"
authors = ["pathfindermilan <pathfinder.milan@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
exceptiongroup = "*"
async-timeout = "*"
poetry="*"
ordered-set = "^4.1.0"
sympy = "^1.13.3"
numpy = "^2.2.0"

[tool.poetry.dev-dependencies]
autopep8 = "*"
pytest = "*"
pytest-watch = "*"
model-bakery = "*"
locust = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"